<package format="3">
  <name>arm_changer</name>
  <version>0.0.0</version>
  <description>publishing arm angles.</description>
  <maintainer email="0_0sy@g.seoulteach.ac.kr">0_0</maintainer>
  <license>None</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>Eigen3</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>Eigen3</exec_depend>
  <exec_depend>sbus_interfaces</exec_depend>
  <exec_depend>dynamixel_interfaces</exec_depend>
  <exec_depend>watchdog_interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
