<package format="3">
  <name>allocator</name>
  <version>0.0.0</version>
  <description>do control allocation and solve ik.</description>
  <maintainer email="milkomeda@seoultech.ac.kr">kyprus</maintainer>
  <license>None</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>controller_interfaces</exec_depend>
  <exec_depend>allocator_interfaces</exec_depend>
  <exec_depend>dynamixel_interfaces</exec_depend>
  <exec_depend>watchdog_interfaces</exec_depend>
  <exec_depend>rclcpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>