<package format="3">
  <name>controller_geom</name>
  <version>0.0.0</version>
  <description>SO3 geometry controller node make desired force and moments.</description>
  <maintainer email="milkomeda@seoultech.ac.kr">kyprus</maintainer>
  <license>None</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>Eigen3</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>Eigen3</exec_depend>
  <exec_depend>controller_interfaces</exec_depend>
  <exec_depend>sbus_interfaces</exec_depend>
  <exec_depend>imu_interfaces</exec_depend>
  <exec_depend>mocap_interfaces</exec_depend>
  <exec_depend>watchdog_interfaces</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>