<package format="3">
  <name>sbus</name>
  <version>0.0.0</version>
  <description>get sbus signals from UART</description>
  <maintainer email="milkomeda@seoultech.ac.kr">kyprus</maintainer>
  <license>None</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>sbus_interfaces</depend>
  <depend>watchdog_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
